--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  dio: ^4.0.4
+  dio: ^5.0.0
   http: ^0.13.5
   flutter:
     sdk: flutter
@@ -38,7 +38,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  chopper: ^5.1.0
+  chopper: 5.1.0
   build_runner: ^2.1.10
   chopper_generator: ^5.1.0+1
 
