--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,14 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  chopper: ^5.1.0
-  dio: ^4.0.4
+  chopper: 5.1.0
+  dio: ^5.0.0
   flutter:
     sdk: flutter
   flutter_local_notifications: ^12.0.3
-  flutter_localizations:
-    sdk: flutter
+  flutter_localization: ^0.1.10
   http: ^0.13.5
-  http_mock_adapter: ^0.3.3
+  http_mock_adapter: ^0.4.2
   share_plus: ^6.3.0
   shared_preferences: ^2.0.15
 
