--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^12.0.3
-  flutter_localization: ^0.1.10
   http: ^0.13.5
   http_mock_adapter: ^0.4.2
+  localization: ^2.1.0
   share_plus: ^6.3.0
   shared_preferences: ^2.0.15
 
